Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.12.2
-
Fix Version/s: Qt Creator 4.13.0-beta1
-
Component/s: Analyzer: Clang Tidy & Clazy
-
Labels:
-
Environment:Qt 5.15.0 - MinGW 8.1 64bit
-
Platform/s:
-
Commits:782ca5d8d8e88b25b3424848c1297caf94a66585 (qt-creator/qt-creator/4.13)
Description
When cfloat is included in a source code file then it will fail to parse the code model when using MinGW. With other kits it is fine, but with MinGW it will fail to parse float.h as it is looking in the wrong place since it looks for it in the Clang includes.
Attachments
Issue Links
- duplicates
-
QTCREATORBUG-24027 Error with clang tidy when analyse current file
-
- Closed
-